# BasisOfUnderstanding

./: .gitignore  pyproject.toml
basis_of_understanding/: app.py  collect.py  config.py  decode.py  embeddings.py  lll.py  pipeline.py
docs/superpowers/plans/: 2026-06-13-basis-of-understanding.md
docs/superpowers/specs/: 2026-06-13-basis-of-understanding-design.md
scripts/: fetch_glove.py
tests/: conftest.py  test_app.py  test_collect.py  test_config.py  test_decode.py  test_embeddings.py  test_lll.py  test_pipeline.py
