[project]
name = "basis-of-understanding"
version = "0.1.0"
description = "LLL lattice reduction over word embeddings as generative art"
requires-python = ">=3.11"
# fpylll requires: brew install fplll gmp mpfr qd
dependencies = [
    "numpy>=1.26",
    "gensim>=4.3",
    "gradio>=4.0",
    "fpylll>=0.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["basis_of_understanding*"]
